<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registrar">

    <LinearLayout
        android:id="@+id/lytregistrar"
        android:layout_width="379dp"
        android:layout_height="571dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txttitleregistro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:text="@string/text_txttitleregistrar"
            android:textSize="36sp" />

        <EditText
            android:id="@+id/txtfullname"
            android:layout_width="313dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/hint_txtfullname"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/txtemail"
            android:layout_width="313dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/hint_txtemail"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/txtcontraseña"
            android:layout_width="313dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/hint_txtcontraseña"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/txtconfpass"
            android:layout_width="313dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/homt_txtconfpass"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnregistrar"
            android:layout_width="191dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="#03A8F3"
            android:text="@string/text_btnregistrar"
            android:textColor="#FFFFFF" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>