<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/lytlogin"
        android:layout_width="379dp"
        android:layout_height="571dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/lbltitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:fontFamily="sans-serif-smallcaps"
            android:hapticFeedbackEnabled="false"
            android:text="@string/text_lbltitle"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="36sp" />

        <EditText
            android:id="@+id/txtuser"
            android:layout_width="264dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_txttuser"
            android:importantForAutofill="no"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/txtpass"
            android:layout_width="265dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/hint_txtpass"
            android:importantForAutofill="no"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnlogin"
            android:layout_width="139dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="#03A9F4"
            android:text="@string/text_btnlogin"
            android:textColor="#F8F8F9" />

        <TextView
            android:id="@+id/lblregistrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/text_lblregistrar"
            android:textColor="#03A8F3" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>